# oai_kpa_power

./: .gitignore  CHANGELOG.md  __main__.py  commands.json  config.json  oai_kpa_power.py  pyproject.toml
cfg/: oai_kpa_power.json
log/2020_12_26 oai_kpa_stm/: 2020_12_26 17-36-02 oai_kpa_stm .csv  2020_12_26 17-36-39 oai_kpa_stm .csv  2020_12_26 17-41-21 oai_kpa_stm .csv  2020_12_26 17-41-27 oai_kpa_stm .csv
oai_kpa_power/: __init__.py  __main__.py  oai_kpa_power.py
