[tool.poetry]
name = "oai_kpa_power"
version = "0.1.0"
description = "first working release"
authors = ["Alexey <alexey.koslov@yandex.ru>"]
license = "free to use"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
